// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormAndReviewList component add button calls add event 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "key": "item 1",
      }
    }
    key="item 1"
    onDeleteClick={[Function]}
  />
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={1}
    initialExpanded={true}
    item={
      Object {
        "key": "item2",
      }
    }
    key="item2"
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component expands and collapses items 1`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  extraButtons={Array []}
  index={1}
  initialExpanded={false}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__collapsed"
  >
    <Collapsed
      expand={[Function]}
      index={1}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Collapsed>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component expands and collapses items 2`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  extraButtons={Array []}
  index={1}
  initialExpanded={false}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__expanded"
  >
    <Expanded
      collapse={[Function]}
      index={1}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Expanded>
    <p
      className="align-content-right ds-u-margin-y--0"
      style={
        Object {
          "width": "485px",
        }
      }
    />
    <Button
      component="button"
      id="form-and-review-list--done-btn"
      onClick={[Function]}
      type="button"
      variation="primary"
    >
      <button
        className="ds-c-button ds-c-button--primary"
        id="form-and-review-list--done-btn"
        onClick={[Function]}
        type="button"
      >
        Done
      </button>
    </Button>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component expands and collapses items 3`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  extraButtons={Array []}
  index={1}
  initialExpanded={false}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__collapsed"
  >
    <Collapsed
      expand={[Function]}
      index={1}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Collapsed>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component handles extra buttons on list items passes extra buttons into the items, if provided 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={
      Array [
        "button 1",
        "button 2",
      ]
    }
    index={0}
    initialExpanded={false}
    item={
      Object {
        "key": "key 1",
      }
    }
    key="key 1"
    onDeleteClick={null}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    Add another
  </Button>
</div>
`;

exports[`FormAndReviewList component handles extra buttons on list items renders any buttons passed in 1`] = `
<div
  className="form-and-review-list--item__expanded"
>
  <Expanded
    collapse={[Function]}
    index={1}
    initialCollapsed={false}
  />
  <p
    className="align-content-right ds-u-margin-y--0"
    style={
      Object {
        "width": "485px",
      }
    }
  >
    <Button
      className="ds-c-button ds-c-button--transparent"
      component="button"
      key="button 1"
      onClick={[Function]}
      type="button"
    >
      <FontAwesomeIcon
        border={false}
        className="ds-u-margin-right--1"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f055",
              "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z",
            ],
            "iconName": "plus-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
      button 1
    </Button>
    <Button
      className="ds-c-button ds-c-button--transparent"
      component="button"
      key="button 2"
      onClick={[Function]}
      type="button"
    >
      <FontAwesomeIcon
        border={false}
        className="ds-u-margin-right--1"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f055",
              "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z",
            ],
            "iconName": "plus-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
      button 2
    </Button>
  </p>
  <Button
    component="button"
    id="form-and-review-list--done-btn"
    onClick={[Function]}
    type="button"
    variation="primary"
  >
    Done
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with a custom class name 1`] = `
<div
  className="form-and-review-list test-class"
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": false,
        "key": "one",
      }
    }
    key="one"
    onDeleteClick={[Function]}
  />
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={1}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": true,
        "key": "two",
      }
    }
    key="two"
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with just one item 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "key": "one",
      }
    }
    key="one"
    onDeleteClick={null}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with just one item and allowDeleteAll set to true 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "key": "one",
      }
    }
    key="one"
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with multiple items 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": false,
        "key": "one",
      }
    }
    key="one"
    onDeleteClick={[Function]}
  />
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    extraButtons={Array []}
    index={1}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": true,
        "key": "two",
      }
    }
    key="two"
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with no items 1`] = `
<div
  className="form-and-review-list "
>
  <div>
    <p
      className="ds-u-margin-top--4"
    >
      displayed when there is no data
    </p>
  </div>
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with no items and noDataMessage set to false 1`] = `
<div
  className="form-and-review-list "
>
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly without an add button if the onAddClick prop is missing 1`] = `
<div
  className="form-and-review-list "
>
  <div>
    <p
      className="ds-u-margin-top--4"
    >
      displayed when there is no data
    </p>
  </div>
</div>
`;
